<resources>
    <string name="app_name">CareMark</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="email_required">Email is required</string>
    <string name="name">Name</string>
    <string name="medication_details">MEDICATION DETAILS</string>
    <string name="medication_name">Medication name</string>
    <string name="doses">Doses</string>
    <string name="time">Time</string>
    <string name="no_of_times">No of times</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="start_date">Start date</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="end_date">End date</string>
    <string name="appointment_day">Appointment day</string>
    <string name="save">SAVE</string>
    <string name="home">Home</string>
    <string name="medication">Medication</string>
    <string name="track">Track</string>
    <string name="points">Points</string>
    <string name="this_weeks_progress">This Weeks Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture" />
    <string name="take_picture_description" />
    <string name="ok_button_title" />
    
    <string name="end_dd_mm_yyyy">end_dd_mm_yyyy</string>
    <string name="start_dd_mm_yyyy">start_dd_mm_yyyy</string>
    <string name="checkup_dd_mm_yyyy">checkup_dd_mm_yyyy</string>
    <string name="track_medication">Track Medication</string>

</resources>